# box-em-all

./: .gitignore  README.md  pyproject.toml
box-em-all/: api.py  game.py  main.py  mcts.py  mctsnode.py  model.py  player.py
dots-and-boxes-frontend/: .gitignore  README.md  package-lock.json  package.json
dots-and-boxes-frontend/app/: actions.ts  layout.tsx  manifest.ts  page.tsx
model/: dqn_3_greedy_59_greedy.pt  dqn_3_greedy_93.pt  dqn_4_greedy_96.pt  q_table_2.pkl  q_table_2_2.pkl
player-model/: README.md  dqn_3.pt  dqnconv_3_greedy_94_greedy.pt  dqnconv_5_greedy_95_greedy.pt  dqnconv_5_greedy_ext_99_greedy_ext.pt
wandb/: latest-run
wandb/run-20241111_215949-3mbntuyv/: run-3mbntuyv.wandb
wandb/run-20241111_215949-3mbntuyv/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20241111_220549-678l0185/: run-678l0185.wandb
wandb/run-20241111_220549-678l0185/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20241111_224218-phkcy0u9/: run-phkcy0u9.wandb
wandb/run-20241111_224218-phkcy0u9/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20241112_082815-tse3qf7l/: run-tse3qf7l.wandb
wandb/run-20241112_082815-tse3qf7l/files/: wandb-metadata.json
wandb/run-20241112_082851-nk6tweja/: run-nk6tweja.wandb
wandb/run-20241112_082851-nk6tweja/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20241112_085006-5nf1nwhq/: run-5nf1nwhq.wandb
wandb/run-20241112_085006-5nf1nwhq/files/: wandb-metadata.json  (+1 more)
wandb/run-20241112_100641-maqced6o/: run-maqced6o.wandb
(+8 files in other folders)
