[tool.poetry]
name = "box-em-all"
version = "0.1.0"
description = "Solving Dots & Boxes with Reinforcement Learning"
authors = [
    "Mike Kobler <mike.kobler@ost.ch.>",
    "Lorenz Bösch <lorenz.boesch@ost.ch.>",
    "Marco Reifler <marco.reifler@ost.ch.>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
tqdm = "^4.67.0"
matplotlib = "^3.9.2"
wandb = "^0.18.6"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
